--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="MyPhoto" src="images/Myphoto.jpg" alt="MyPhoto">
+      <img class="MyPhoto" src="images/myphoto.jpg" alt="MyPhoto">
       <h2>Hello!</h2>
       <p class="intro">I am a petroleum engineer. And now I'm studying to be a Web developer. I &#128525 my family, sport and travelling.</p>
     </div>
